[gd_scene load_steps=4 format=3 uid="uid://bu65e7qx8g7w1"]

[ext_resource type="Script" path="res://src/minigames/color_time_minigame/color_time_minigame.gd" id="1_yik61"]
[ext_resource type="AudioStream" uid="uid://pvahdhboo1le" path="res://assets/sounds/sfx/click_sound.wav" id="2_4fnn5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_icor5"]

[node name="ColorTimeMinigame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yik61")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 48

[node name="Panel" type="Panel" parent="HBoxContainer2"]
custom_minimum_size = Vector2(480, 480)
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 48

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="LightPanel1" type="Panel" parent="HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_icor5")

[node name="LightPanel2" type="Panel" parent="HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LightPanel3" type="Panel" parent="HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 128

[node name="TimeLabel" type="Label" parent="HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 44
text = "TIME"
horizontal_alignment = 1

[node name="TimeLeftLabel" type="Label" parent="HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 44
text = "TIME"
horizontal_alignment = 1

[node name="TimesClickedLabel" type="Label" parent="HBoxContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 44
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 16.0
one_shot = true
autostart = true

[node name="Button_press_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_4fnn5")
bus = &"SFX"
